prevent scrollbars on the y-axis from appearing.

--- a/app/styles/ui/_panel.scss
+++ b/app/styles/ui/_panel.scss
@@ -1,5 +1,6 @@
 .panel {
   display: flex;
+  overflow-y: visible;
   flex-direction: column;
   flex: 1;
 }
